--- a/playbook.yml
+++ b/playbook.yml
@@ -4,7 +4,7 @@
 - name: Stage instance(s)
   hosts: 127.0.0.1
   connection: local
-  user: {{user}}
+  user: "{{user}}"
   gather_facts: false
   
   tags:
@@ -81,7 +81,7 @@
 - name: Assign permanent IP's
   hosts: 127.0.0.1
   connection: local
-  user: {{user}}
+  user: "{{user}}"
   gather_facts: false
   vars_files:
     - vars.yml
