--- a/playbook.yml
+++ b/playbook.yml
@@ -17,8 +17,19 @@
 
   tasks:
     - name: Launch instance 
-      local_action: ec2 keypair={{keypair}} group={{security_group}} instance_type={{instance_type}} image={{image}} region={{region}} wait=yes count={{instance_count}}
-      register: ec2
+      local_action: 
+          module: ec2
+          keypair: "{{keypair}}"
+          group: "{{security_group}}"
+          instance_type: "{{instance_type}}"
+          image: "{{image}}"
+          region: "{{region}}"
+          wait: yes
+          count: "{{instance_count}}"
+          volumes:
+          - device_name: /dev/sda1
+            volume_size: "{{disk_size}}"
+      register: ec2      
     
     # Use with_items to add each instances public IP to a new hostgroup for use in the next play.
 
@@ -77,20 +88,20 @@
       service: name=apache2 state=restarted
       sudo: true
       
-- name: Assign permanent IP's
-  hosts: 127.0.0.1
-  connection: local
-  user: "{{user}}"
-  gather_facts: false
-  vars_files:
-    - vars.yml
+#- name: Assign permanent IP's
+#  hosts: 127.0.0.1
+#  connection: local
+#  user: "{{user}}"
+#  gather_facts: false
+#  vars_files:
+#    - vars.yml
 
-  tasks:
-    - name: Allocate a new elastic IP and associate it with an instance
-      ec2_eip: instance_id={{ item.id }} region=us-east-1
-      with_items: ec2.instances
-      
-    - name: hostname
-      lineinfile: line='127.0.0.1        {{ hostname }}' state=present insertafter=EOF dest=/etc/hosts
-      sudo: true
-      when: hostname is defined
+#  tasks:
+#    - name: Allocate a new elastic IP and associate it with an instance
+#      ec2_eip: instance_id={{ item.id }} region=us-east-1
+#      with_items: ec2.instances
+#      
+#    - name: hostname
+#      lineinfile: line='127.0.0.1        {{ hostname }}' state=present insertafter=EOF dest=/etc/hosts
+#      sudo: true
+#      when: hostname is defined
