--- a/tasks/db.yml
+++ b/tasks/db.yml
@@ -3,8 +3,8 @@
   sudo: true
   apt: pkg=python-mysqldb state=latest
 - name: clear omeka user
-  mysql_user: name=omeka state=absent
+  mysql_user: name={{db_username}} state=absent
 - name: create omeka user
-  mysql_user: name=omeka password=omeka state=present priv=*.*:ALL
+  mysql_user: name={{db_username}} password={{db_password}} state=present priv=*.*:ALL
 - name: create omeka db
-  mysql_db: name=omeka login_user=omeka login_password=omeka state=present
+  mysql_db: name=omeka login_user={{db_username}} login_password={{db_password}} state=present
